deploy/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portkeeper-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: portkeeper-demo
